2013-04-24 Miguel de Dios <miguel.dedios@artica.es>

	* godmode/agentes/planned_downtime.editor.php: fixed the header.
	
	Fixes: #3611687

2013-04-24 Miguel de Dios <miguel.dedios@artica.es>

	* mobile/operation/groups.php, mobile/operation/agents.php,
	mobile/operation/tactical.php, mobile/operation/alerts.php,
	mobile/operation/agent.php, mobile/operation/events.php,
	mobile/operation/module_graph.php, mobile/operation/modules.php,
	mobile/include/style/main.css: some fixes.
	
	* include/functions.php: erased the lost trace.
	
	* include/functions_graph.php: cleaned source code style.

2013-04-24  Sergio Martin <sergio.martin@artica.es>

	* godmode/servers/servers.build_table.php
	godmode/servers/modificar_server.php: Rewrite missed
	servers buttons in last huge merge. Add success/error
	messages on this actions

2013-04-23  Sergio Martin <sergio.martin@artica.es>

	* include/styles/dialog.css
	include/styles/images/dialog-titlebar-close.png
	include/styles/pandora.css
	include/ajax/events.php
	include/functions_events.php
	images/event_responses_col.png
	images/interrogant.png
	general/pandora_help.php
	general/footer.php
	general/login_page.php
	general/logon_ok.php: Change the help screens and 
	the modal windows visual style to new design.
	Little fixes to support metaconsole login and 
	some visual changes

2013-04-23 Miguel de Dios <miguel.dedios@artica.es>

	* include/functions_ui.php, include/javascript/pandora_modules.js:
	cleaned source code style.

2013-04-23 Miguel de Dios <miguel.dedios@artica.es>

	* include/functions_filemanager.php: fixed the javascript to show
	the controls to upload file, create directory and create text file.
	
	Fixes: #3611231

2013-04-23 Miguel de Dios <miguel.dedios@artica.es>

	* operation/events/events_list.php, operation/events/events.php,
	include/functions_events.php: fixed PHP warnings.

2013-04-23 Miguel de Dios <miguel.dedios@artica.es>

	* godmode/tag/tag.php: fixed the column for large list of emails,