@@ -804,7 +804,7 @@ function networkmap_open_graph ($layout, $nooverlap, $pure, $zoom, $ranksep, $fo
 	$size = $size_x . ',' . $size_y;
 	
 	// BEWARE: graphwiz DONT use single ('), you need double (")
-	$head = "graph networkmap { labeljust=l; margin=0; ";
+	$head = "graph networkmap { bgcolor=\"transparent\", labeljust=l; margin=0; ";
 	if ($nooverlap != '') {
 		$head .= "overlap=\"$overlap\";";
 		$head .= "ranksep=\"$ranksep\";";
